--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
-  "devDependencies": {
-    "vuepress": "^1.9.10"
+  "name": "@calvindd2f/blog",
+  "version": "0.0.1",
+  "license": "MIT",
+  "description": "Articles & Documentation.",
+  "authors": {
+    "name": "Calvin Bergin",
+    "email": "c@lvin.ie"
   },
+  "repository": "https://github.com/calvindd2f.github.io",
   "scripts": {
-    "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "dev": "vuepress dev src",
+    "build": "vuepress build src",
+    "lint": "vuepress check-md src --fix && prettier . --write && eslint \"**/*.{js,vue}\" --fix",
+    "lint:check": "vuepress check-md src && prettier . --check && eslint \"**/*.{js,vue}\""
+  },
+  "devDependencies": {
+    "@vuepress/plugin-docsearch": "2.0.0-rc.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-vue": "9.20.1",
+    "prettier": "3.2.4",
+    "prettier-plugin-organize-imports": "3.2.4",
+    "vuepress": "2.0.0-rc.0",
+    "vuepress-plugin-code-switcher": "2.0.0",
+    "vuepress-plugin-md-enhance": "2.0.0-rc.12"
   }
-  
 }
