--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "lint:check": "vuepress check-md src && prettier . --check && eslint \"**/*.{js,vue}\""
   },
   "devDependencies": {
-    "@vuepress/plugin-docsearch": "2.0.0-rc.0",
+    "@vuepress/plugin-docsearch": "^2.0.0-rc.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-vue": "9.20.1",
     "prettier": "3.2.4",
     "prettier-plugin-organize-imports": "3.2.4",
-    "vuepress": "2.0.0-rc.0",
+    "vuepress": "^2.0.0-rc.9",
     "vuepress-plugin-code-switcher": "2.0.0",
     "vuepress-plugin-md-enhance": "2.0.0-rc.12"
+  },
+  "dependencies": {
+    "@vuepress/plugin-search": "^2.0.0-rc.21"
   }
 }
